[package]
name = "weakheap"
version = "0.1.0"
authors = ["PrototypeRailGun"]
license = "MIT"
edition = "2021"
readme = "README.md"
description="Weak Heap data structure implementation in Rust"
homepage="https://github.com/PrototypeRailGun/weakheap"
repository="https://github.com/PrototypeRailGun/weakheap"
keywords = ["heap", "weakheap", "sorting"]
categories = ["data structures"]

[lib]
name = "weakheap"
bench = false

[dependencies]

[dev-dependencies]
rand = "0.8.4"
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false